--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <table cellspacing="20">
-    <td><img src="images/yonas.png" alt="My profile picture"></td>
+    <td><img src="yonas.png" alt="My profile picture"></td>
     <td><h1>ዮናስ የማነ</h1>
     <p><em>Founder of the <strong>M</strong> movement.</em></p>
     <p>The M movement is a nofap movement.</p>
